--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,9 +5,23 @@ permalink: /publications/
 author_profile: true
 ---
 
+<style>
+/* 移除列表项右侧的预留空白 */
+.list__item, 
+.archive__item {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-right: 0 !important;
+}
+
+/* 确保摘要文字也能占满整行 */
+.archive__item-excerpt {
+    max-width: 100% !important;
+}
+</style>
+
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
