--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,10 +1,22 @@
 ---
-layout: archive
+layout: single
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
-classes: wide
 ---
+
+<style>
+.list__item, 
+.archive__item {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-right: 0 !important;
+}
+
+.archive__item-excerpt {
+    max-width: 100% !important;
+}
+</style>
 
 {% include base_path %}
 
